--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/login.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/login.html
@@ -36,8 +36,8 @@
                2). This method properties means these data won't go to the url but to the request-body
                     -->
                 <form
-                        data-th-action="@{'/authenticate'}"
-                        method="post"
+                        data-th-action="@{'/user/profile'}"
+                        method="GET"
                         class="mt-5"
                         >
                     <!-- 1). data-th-object: now we can use the properties of userForm object directly in the field below
@@ -85,10 +85,10 @@
                                 type="submit"
                                 class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
 
-                        <!-- Reset button -->
-                        <!--                            <button  -->
-                        <!--                            type="reset" -->
-                        <!--                            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>-->
+<!--                         Reset button -->
+                        <button
+                                type="reset"
+                                class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>
 
                     </div>
                 </form>
