--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -130,9 +130,9 @@
                             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</button>
 
                             <!-- Reset button -->
-<!--                            <button  -->
-<!--                            type="reset" -->
-<!--                            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>-->
+                            <button
+                            type="reset"
+                            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>
 
                          </div>
                      </form>
